--- a/Exercises/Serialisation/TarjetaCreditoSerializacion/src/interfaz/InterfazJF.form
+++ b/Exercises/Serialisation/TarjetaCreditoSerializacion/src/interfaz/InterfazJF.form
@@ -30,6 +30,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="A&#xf1;adir Tarjeta"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiA&#xf1;adirTarjetaActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jmiModificarTarjeta">
               <Properties>
