--- a/Exercises/Serialisation/TarjetaCreditoSerializacion/src/interfaz/JDGestionarTarjeta.form
+++ b/Exercises/Serialisation/TarjetaCreditoSerializacion/src/interfaz/JDGestionarTarjeta.form
@@ -21,6 +21,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Realizar Pago"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiRealizarPagoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jmiConsultarMovimientos">
               <Properties>
