--- a/Exercises/Serialisation/TarjetaCreditoSerializacion/src/interfaz/JDGestionarTarjeta.form
+++ b/Exercises/Serialisation/TarjetaCreditoSerializacion/src/interfaz/JDGestionarTarjeta.form
@@ -29,6 +29,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Consultar Movimientos"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiConsultarMovimientosActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
